Rate 기본 설계
